# sensofit

./: .gitignore  README.md  plan.md  pyproject.toml
creoptix_fitting/: __init__.py  data_loader.py  direct_kinetics.py  models.py  ode_core.py  ode_fitting.py  ode_pure_grid.py  ode_pure_heuristic.py
docs/: data_loader.md  fitting_approach.md
notebooks/: 00_data_release.ipynb  01_explore.ipynb  02_fitting_demo.ipynb  03_concentration_error.ipynb  04_batch_screening.ipynb  05_batch_ode.ipynb  cedric-check.ipynb  cedric-dev.ipynb
sensefit/: __init__.py  __main__.py  batch.py  data_loader.py  direct_kinetics.py  plotting.py
sensofit/: __init__.py  __main__.py  batch.py  data_loader.py  dataexporter.py  direct_kinetics.py  gui.py  models.py  ode_fitting.py  package_loader.py  plotting.py  protocol_dev.py
tests/: test_batch.py  test_dataexporter.py  test_direct_kinetics.py  test_loader.py  test_models.py  test_ode_fitting.py  test_ode_pure_grid.py  test_ode_pure_heuristic.py  test_package_loader.py  test_plotting.py
